@@ -1,3 +1,12 @@
+2009-05-25  Alberto Garcia  <agarcia@igalia.com>
+
+	* hildon/hildon-app-menu.c
+	(hildon_app_menu_insert, hildon_app_menu_add_filter):
+	Don't call gtk_widget_show() on added items.
+
+	Fixes: NB#109063 (HildonAppMenu shouldn't show its items
+	automatically when they're added)
+
 2009-05-20  Alberto Garcia  <agarcia@igalia.com>
 
 	* hildon/hildon-banner.c
